Refactoring, Theme detection - refactored gen-icons.ts - renamed icondraw to icon - renamed draw to icon - missing from previous pull request (darkmode)   - auto detection of the theme   - fixed light scrollbars with dark theme (Chrome)

--- a/src/ide/css-dark/codemirror.css
+++ b/src/ide/css-dark/codemirror.css
@@ -6,6 +6,11 @@
 
 /* PADDING */
 
+.dark-theme .CodeMirror-scrollbar-filler,
+.dark-theme .CodeMirror-gutter-filler {
+	background-color: #1e1e1e; /* The little square between H and V scrollbars */
+}
+
 /* GUTTER */
 
 .dark-theme .CodeMirror-gutters {
