--- a/src/ide/css-dark/tgui.css
+++ b/src/ide/css-dark/tgui.css
@@ -1,3 +1,8 @@
+.dark-theme {
+	/* dark theme for scrollbars, etc */
+	color-scheme: dark;
+}
+
 .dark-theme .tgui-control {
 	color: #fff;
 }
